--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                         <font color="#6F6D6D " size="4">EgoGen: a scalable synthetic data generation system for egocentric perception tasks, with rich multi-modal data and accurate annotations. We simulate camera rigs for head-mounted devices (HMDs) and render from the perspective of the camera wearer with various sensors. Top to bottom: middle and right camera sensors in the rig. Left to right: photo-realistic RGB image, RGB with simulated motion blur, depth map, surface normal, segmentation mask, and world position for fisheye cameras widely used in HMDs. </font>
                         <h5>
                   <br>
-		     <p><video width="100%" autoplay loop muted playsinline> <source src="video/teaser.mp4" type="video/mp4"/> </video>
+		     <p><video style="width: 100%; height: auto; display: block; margin: auto;" controls autoplay preload loop muted playsinline> <source src="video/teaser.mp4" type="video/mp4"/> </video>
                   <br>
                    <h2>Abstract</h2>
                    <div class="text-center">
@@ -211,7 +211,7 @@
                   <p class="lead text-justify">
                         While the model is trained in static scenes, it demonstrates direct generalizability to dynamic settings, including dynamic obstacle avoidance and crowd motion synthesis.
                        </p>
-                        <div style="display: flex; justify-content: space-between;">
+                        <div style="display: flex; justify-content: space-between; align-items: flex-end;">
 
         <div>
             <h6 style="text-align: center;">Moving Obstacle</h6>
@@ -252,7 +252,7 @@
                         Besides, our generative human motion model allows for generating diverse crowd motions for diverse body shapes, incorporating variations in height and weight.
                        </p>
 
-                       <div style="display: flex; justify-content: space-between;">
+                       <div style="display: flex; justify-content: space-between; align-items: flex-end;">
 
         <div style="width: 30%;">
             <h6 style="text-align: center;">PhysicsVAE [Won et al. 2022]</h6>
@@ -330,7 +330,7 @@
     </div>-->
                     <p class="lead text-justify">EgoGen has the capability to produce realistic synthetic egocentric data that closely matches real-world captures. We visualize some synthetic images and their extracted feature points with SuperPoint:</p>
 
-                    <div style="display: flex; justify-content: center; gap:10px;">
+                    <div style="display: flex; justify-content: center; gap:10px; width: 80%; margin: auto;">
 
         <div>
             <img src="images/lamar/1.png" alt="Real-world captures with HMDs" class="img-fluid">
@@ -353,7 +353,7 @@
 <br>
                     <p class="lead text-justify">And we show some render-to-real image pairs matched with SuperGlue:</p>
 
-                    <div style="display: flex; justify-content: center; gap:10px;">
+                    <div style="display: flex; justify-content: center; gap:10px; width: 80%; margin: auto;">
 
         <div>
             <img src="images/lamar/match1.png" alt="Real-world captures with HMDs" class="img-fluid">
