--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                         <font color="#6F6D6D " size="4">EgoGen: a scalable synthetic data generation system for egocentric perception tasks, with rich multi-modal data and accurate annotations. We simulate camera rigs for head-mounted devices (HMDs) and render from the perspective of the camera wearer with various sensors. Top to bottom: middle and right camera sensors in the rig. Left to right: photo-realistic RGB image, RGB with simulated motion blur, depth map, surface normal, segmentation mask, and world position for fisheye cameras widely used in HMDs. </font>
                         <h5>
                   <br>
-		     <p><video style="width: 100%; height: auto; display: block; margin: auto;" controls autoplay preload loop muted playsinline> <source src="video/teaser.mp4" type="video/mp4"/> </video>
+		     <p><video style="width: 100%; height: auto; display: block; margin: auto;" controls autoplay preload loop muted playsinline> <source src="video/teaser.webm" type="video/webm"/> </video>
                   <br>
                    <h2>Abstract</h2>
                    <div class="text-center">
@@ -213,32 +213,32 @@
                        </p>
                         <div style="display: flex; justify-content: space-between; align-items: flex-end;">
 
-        <div>
-            <h6 style="text-align: center;">Moving Obstacle</h6>
+        <div style="text-align: center;">
+            <h6>Moving Obstacle</h6>
             <video style="width: 90%; height: auto; display: block; margin: auto;" controls autoplay loop muted playsinline>
                 <source src="video/moving.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </div>
 
-        <div>
-            <h6 style="text-align: center;">Two People</h6>
+        <div style="text-align: center;">
+            <h6>Two People</h6>
             <video style="width: 90%; height: auto; display: block; margin: auto;" controls autoplay loop muted playsinline>
                 <source src="video/2man.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </div>
 
-        <div>
-            <h6 style="text-align: center;">More People</h6>
+        <div style="text-align: center;">
+            <h6>More People</h6>
             <video style="width: 90%; height: auto; display: block; margin: auto;" controls autoplay loop muted playsinline>
                 <source src="video/4man.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </div>
 
-        <div>
-            <h6 style="text-align: center;">Even More People</h6>
+        <div style="text-align: center;">
+            <h6>Even More People</h6>
             <video style="width: 90%; height: auto; display: block; margin: auto;" controls autoplay loop muted playsinline>
                 <source src="video/8man.mp4" type="video/mp4">
                 Your browser does not support the video tag.
@@ -254,24 +254,24 @@
 
                        <div style="display: flex; justify-content: space-between; align-items: flex-end;">
 
-        <div style="width: 30%;">
-            <h6 style="text-align: center;">PhysicsVAE [Won et al. 2022]</h6>
+        <div style="width: 30%; text-align: center;">
+            <h6>PhysicsVAE [Won et al. 2022]</h6>
             <video style="width: 100%; height: auto; display: block; margin: auto;" controls autoplay loop muted playsinline>
                 <source src="video/physicsvae.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </div>
 
-        <div style="width: 30%;">
-            <h6 style="text-align: center;">Ours</h6>
+        <div style="width: 30%; text-align: center;">
+            <h6>Ours</h6>
             <video style="width: 100%; height: auto; display: block; margin: auto;" controls autoplay loop muted playsinline>
                 <source src="video/diverse.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </div>
 
-        <div style="width: 30%;">
-            <h6 style="text-align: center;">Static body shapes in the left video</h6>
+        <div style="width: 30%; text-align: center;">
+            <h6>Static body shapes in the left video</h6>
             <img class="img-fluid" src="images/shape.png">
         </div>
 
