--- a/index.html
+++ b/index.html
@@ -165,7 +165,9 @@
                         <font color="#6F6D6D " size="4">EgoGen: a scalable synthetic data generation system for egocentric perception tasks, with rich multi-modal data and accurate annotations. We simulate camera rigs for head-mounted devices (HMDs) and render from the perspective of the camera wearer with various sensors. Top to bottom: middle and right camera sensors in the rig. Left to right: photo-realistic RGB image, RGB with simulated motion blur, depth map, surface normal, segmentation mask, and world position for fisheye cameras widely used in HMDs. </font>
                         <h5>
                   <br>
-		     <p><video style="width: 100%; height: auto; display: block; margin: auto;" controls autoplay preload loop muted playsinline> <source src="video/teaser.mp4" type="video/mp4"/> </video>
+		     <!--<p><video style="width: 100%; height: auto; display: block; margin: auto;" controls autoplay preload loop muted playsinline> <source src="video/teaser.mp4" type="video/mp4"/> </video>-->
+             <iframe width=“560” height=“315" src=“https://www.youtube.com/embed/QbiOJKZ6PBU?si=SWM7JhRXzZ4PO-xc” title=“YouTube video player” frameborder=“0” allow=“accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share” referrerpolicy=“strict-origin-when-cross-origin” allowfullscreen></iframe>
+
                   <br>
                    <h2>Abstract</h2>
                    <div class="text-center">
