--- a/index.html
+++ b/index.html
@@ -145,7 +145,9 @@
                     <br><h3>
                     <a class="publink" href="https://arxiv.org/abs/2401.08739" target="_blank" style="text-decoration: none"> Arxiv <i class="fa fa-print"></i></a> &nbsp;
                     &nbsp;&nbsp;
-                    <a class="publink" href="https://github.com/ligengen/EgoGen" target="_blank" style="text-decoration: none"> Code <i class="fa fa-github"></i></a>
+                    <a class="publink" href="https://github.com/ligengen/EgoGen" target="_blank" style="text-decoration: none"> Code <i class="fa fa-github"></i></a> &nbsp;
+                    &nbsp;&nbsp;
+		    <a class="publink" href="https://egogen.ethz.ch" target="_blank" style="text-decoration: none"> Dataset <i class="fa fa-github"></i></a>
                     <h3>
                 </div>
             </div>
