--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                     &nbsp;&nbsp;
                     <a class="publink" href="https://github.com/ligengen/EgoGen" target="_blank" style="text-decoration: none"> Code <i class="fa fa-github"></i></a> &nbsp;
                     &nbsp;&nbsp;
-		    <a class="publink" href="https://egogen.ethz.ch" target="_blank" style="text-decoration: none"> Dataset <i class="fa fa-github"></i></a>
+		    <a class="publink" href="https://egogen.ethz.ch" target="_blank" style="text-decoration: none"> Dataset <i class="fa fa-database"></i></a>
                     <h3>
                 </div>
             </div>
