--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
                 <div class="authors">
                     <h5>
-                        <a href="https://vlg.inf.ethz.ch/team/Gen-Li.html">Gen Li</a><sup>1</sup>&nbsp;
+                        <a href="https://ligengen.github.io">Gen Li</a><sup>1</sup>&nbsp;
                         <a href="https://vlg.inf.ethz.ch/team/Kaifeng-Zhao.html">Kaifeng Zhao</a><sup>1</sup>&nbsp;
                         <a href="https://vlg.inf.ethz.ch/team/Siwei-Zhang.html">Siwei Zhang</a><sup>1</sup>&nbsp;
                         <a href="https://vlg.inf.ethz.ch/team/Xiaozhong-Lyu.html">Xiaozhong Lyu</a><sup>1</sup>&nbsp;
